// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentBlock Renderer Displays ContentBlock with Media displaying in the background 1`] = `
<div
  className="embed-responsive embed-responsive-1by1  "
>
  <div
    className="fill d-flex justify-content-center align-items-center"
  >
    <div
      className="col px-4 py-6 undefined"
    >
      <div
        className="container-fluid max-width-1100"
      >
        <div
          className="row align-items-center"
        >
          <div
            className="col-12 col-md-6 order-first order-md-last px-3"
          />
          <div
            className="col-12 col-md text-left px-3"
          >
            <div
              className="max-width-800 mx-auto"
            >
              <h5
                className="pt-1 subtitle"
              />
              <h1
                className="font-weight-bold"
              />
              <div
                className="pb-4"
              />
              <div>
                <br />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentBlock Renderer Displays ContentBlock with normal layout 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col px-4 py-6 undefined"
    >
      <div
        className="container-fluid max-width-1100"
      >
        <div
          className="row align-items-center"
        >
          <div
            className="col-12 col-md-6 order-first order-md-last px-3"
          />
          <div
            className="col-12 col-md text-left px-3"
          >
            <div
              className="max-width-800 mx-auto"
            >
              <h5
                className="pt-1 subtitle"
              />
              <h1
                className="font-weight-bold"
              />
              <div
                className="pb-4"
              />
              <div>
                <br />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
